--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,5 @@ remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme 
 
-title: Twitter Birds of a Feather Flock Together: Analyzing American Legislator's Frequently Used Words
-description: Done by Maia, Amara and Sarmad
-show_downloads: true
+title: [Twitter Birds of a Feather Flock Together: Analyzing American Legislator's Frequently Used Words]
+description: [Done by Maia, Amara, and Sarmad]
